<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sergio.prom_t3ej31_ficheros.Activity1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_contentToWrite"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTxt_contentToWrite"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_addIntFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_addIntFile"/>

        <Button
            android:id="@+id/btn_addExtFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_addExtFile"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_readIntFile"
            android:width="99dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_readIntFile"/>

        <Button
            android:id="@+id/btn_readExtFile"
            android:width="99dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_readExtFile"/>

        <Button
            android:id="@+id/btn_readResFile"
            android:width="99dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_readResource"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_delIntFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delIntFile"/>

        <Button
            android:id="@+id/btn_delExtFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delExtFile"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cont"/>

    <TextView
        android:id="@+id/txt_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
